--- a/EgtDemp.Api/EgtDemp.Api.csproj
+++ b/EgtDemp.Api/EgtDemp.Api.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="5.0.0" />
+    <PackageReference Include="Consul" Version="0.7.2.6" />
+    <PackageReference Include="Winton.Extensions.Configuration.Consul" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
