--- a/EgtDemp.Api/appsettings.json
+++ b/EgtDemp.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;database=MyBBSDb;uid=sa;pwd=123qwe"
+  }
 }
