Consul 配置中心配置

--- a/EgtDemp.Api/EgtDemp.Api.csproj
+++ b/EgtDemp.Api/EgtDemp.Api.csproj
@@ -16,5 +16,11 @@
     <ProjectReference Include="..\EgtDemp.IServ\EgtDemp.IServ.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 
 </Project>
